Added suggestion forms

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -13,6 +13,43 @@
 
 	"backButtonTitle": "Back to Home",
 
+	"suggestionsPageTitle": "Tool Suggestions",
+	"suggestionsPageSubtitle": "Have an idea for a new tool? Share it with the community!",
+	"suggestionsPageDescription": "Suggest new tools for WebTools, vote on existing ideas, and discuss with the community.",
+	"suggestToolPopupTitle": "Got a Tool Idea?",
+	"suggestToolPopupButton": "Suggest a Tool",
+	"suggestToolPopupDismiss": "Dismiss",
+	"suggestionsFormTitle": "Submit a New Tool Suggestion",
+	"suggestionsUsernameLabel": "Your Name (Optional):",
+	"suggestionsUsernamePlaceholder": "Anonymous",
+	"suggestionsTextLabel": "Your Tool Suggestion:",
+	"suggestionsTextPlaceholder": "Describe the tool you'd like to see...",
+	"suggestionsSubmitButton": "Submit Suggestion",
+	"suggestionsListTitle": "Community Suggestions",
+	"suggestionsSortBy": "Sort by:",
+	"suggestionsSortLikes": "Most Liked",
+	"suggestionsSortRecent": "Most Recent",
+	"suggestionsNoSuggestions": "No suggestions yet. Be the first to add one!",
+	"suggestionLikes": "Likes",
+	"suggestionDislikes": "Dislikes",
+	"suggestionComments": "Comments",
+	"suggestionViewComments": "View Comments",
+	"suggestionHideComments": "Hide Comments",
+	"suggestionAddCommentButton": "Add Comment",
+	"commentFormTitle": "Add a Comment",
+	"commentUsernameLabel": "Your Name (Optional):",
+	"commentTextLabel": "Your Comment:",
+	"commentSubmitButton": "Post Comment",
+	"suggestionSubmittedSuccess": "Suggestion submitted successfully!",
+	"suggestionVoteSuccess": "Vote recorded!",
+	"suggestionCommentSuccess": "Comment added!",
+	"suggestionClientId": "A unique ID is stored in your browser to track votes.",
+	"suggestionsNoComments": "No comments yet.",
+	"errorAPI": "An API error occurred. Please try again.",
+	"errorNetwork": "Network error. Please check your connection.",
+	"anonymousUser": "Anonymous",
+	"postedBy": "Posted by {{username}} on {{date}}",
+
 	"qrPageTitle": "QR Code Generator",
 	"qrPageSubtitle": "Enter text or a URL to generate a QR code instantly.",
 	"qrInputLabel": "Text or URL:",
