--- a/src/locales/pt_BR.json
+++ b/src/locales/pt_BR.json
@@ -13,6 +13,43 @@
 
 	"backButtonTitle": "Voltar para Início",
 
+	"suggestionsPageTitle": "Sugestões de Ferramentas",
+	"suggestionsPageSubtitle": "Tem uma ideia para uma nova ferramenta? Compartilhe com a comunidade!",
+	"suggestionsPageDescription": "Sugira novas ferramentas para o WebTools, vote em ideias existentes e discuta com a comunidade.",
+	"suggestToolPopupTitle": "Tem uma Ideia de Ferramenta?",
+	"suggestToolPopupButton": "Sugerir Ferramenta",
+	"suggestToolPopupDismiss": "Dispensar",
+	"suggestionsFormTitle": "Enviar Nova Sugestão de Ferramenta",
+	"suggestionsUsernameLabel": "Seu Nome (Opcional):",
+	"suggestionsUsernamePlaceholder": "Anônimo",
+	"suggestionsTextLabel": "Sua Sugestão de Ferramenta:",
+	"suggestionsTextPlaceholder": "Descreva a ferramenta que você gostaria de ver...",
+	"suggestionsSubmitButton": "Enviar Sugestão",
+	"suggestionsListTitle": "Sugestões da Comunidade",
+	"suggestionsSortBy": "Ordenar por:",
+	"suggestionsSortLikes": "Mais Curtidas",
+	"suggestionsSortRecent": "Mais Recentes",
+	"suggestionsNoSuggestions": "Nenhuma sugestão ainda. Seja o primeiro a adicionar uma!",
+	"suggestionLikes": "Curtidas",
+	"suggestionDislikes": "Não Curtidas",
+	"suggestionComments": "Comentários",
+	"suggestionViewComments": "Ver Comentários",
+	"suggestionHideComments": "Esconder Comentários",
+	"suggestionAddCommentButton": "Adicionar Comentário",
+	"commentFormTitle": "Adicionar um Comentário",
+	"commentUsernameLabel": "Seu Nome (Opcional):",
+	"commentTextLabel": "Seu Comentário:",
+	"commentSubmitButton": "Postar Comentário",
+	"suggestionSubmittedSuccess": "Sugestão enviada com sucesso!",
+	"suggestionVoteSuccess": "Voto registrado!",
+	"suggestionCommentSuccess": "Comentário adicionado!",
+	"suggestionClientId": "Um ID unico é armazenado no seu navegador para rastrear votos.",
+	"suggestionsNoComments": "Sem comentários por enquanto.",
+	"errorAPI": "Ocorreu um erro na API. Por favor, tente novamente.",
+	"errorNetwork": "Erro de rede. Verifique sua conexão.",
+	"anonymousUser": "Anônimo",
+	"postedBy": "Postado por {{username}} em {{date}}",
+
 	"qrPageTitle": "Gerador de Código QR",
 	"qrPageSubtitle": "Digite um texto ou URL para gerar um código QR instantaneamente.",
 	"qrInputLabel": "Texto ou URL:",
