Improved mobile interface and added a mania dan calculator (because i can)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -464,5 +464,29 @@
 	"ubcTypeHexadecimal": "Hexadecimal (Base 16)",
 	"ubcTypeOctal": "Octal (Base 8)",
 	"ubcTypeText": "Text (UTF-8 String)",
-	"ubcTypeAscii": "ASCII (Character Codes)"
+	"ubcTypeAscii": "ASCII (Character Codes)",
+
+	"mdcPageTitle": "Mania Dan Calculator",
+	"mdcPageSubtitle": "Calculate individual map scores for osu!mania dan clears.",
+	"mdcDescription": "Enter the ",
+	"mdcOverallAccuracy": "overall % accuracy",
+	"mdcOverallAccuracy2": " shown after each map and the ",
+	"mdcTotalNotes": "total notes",
+	"mdcTotalNotes2": " in each map.",
+	"mdcImportantNote": "Each hold note counts as 2 normal notes per ScoreV2 (osu!lazer standard)",
+	"mdcAddMap": "Add Map",
+	"mdcCalculateScores": "Calculate Scores",
+	"mdcMapNumber": "Map {{mapNumber}}",
+	"mdcRemoveMapTitle": "Remove Map {{mapNumber}}",
+	"mdcOverallAvgLabel": "Overall Avg % After Map",
+	"mdcNotesInMapLabel": "Notes in Map",
+	"mdcIndividualMapPercentages": "Individual Map Percentages",
+	"mdcNotes": "notes",
+	"mdcVerification": "Verification",
+	"mdcOverallAfterMap": "Overall After Map {{mapNumber}}",
+	"mdcGiven": "Given",
+	"mdcErrorMinMaps": "At least {{minMaps}} maps are required.",
+	"mdcErrorInvalidInput": "Please check your input values. Overall average must be 0-100 and notes must be a positive whole number.",
+	"mdcNA": "N/A",
+	"mdcCalculatedSuccess": "Scores calculated successfully!"
 }
