--- a/src/locales/pt_BR.json
+++ b/src/locales/pt_BR.json
@@ -463,5 +463,29 @@
 	"ubcTypeHexadecimal": "Hexadecimal (Base 16)",
 	"ubcTypeOctal": "Octal (Base 8)",
 	"ubcTypeText": "Texto (String UTF-8)",
-	"ubcTypeAscii": "ASCII (Códigos de Caractere)"
+	"ubcTypeAscii": "ASCII (Códigos de Caractere)",
+
+	"mdcPageTitle": "Calculadora de Dan",
+	"mdcPageSubtitle": "Calcule as pontuações individuais dos mapas para clears de dan no osu!mania.",
+	"mdcDescription": "Insira a ",
+	"mdcOverallAccuracy": "precisão geral %",
+	"mdcOverallAccuracy2": " mostrada após cada mapa e o ",
+	"mdcTotalNotes": "total de notas",
+	"mdcTotalNotes2": " em cada mapa.",
+	"mdcImportantNote": "Cada hold note conta como 2 notas normais por ScoreV2 (padrão osu!lazer)",
+	"mdcAddMap": "Adicionar Mapa",
+	"mdcCalculateScores": "Calcular Pontuações",
+	"mdcMapNumber": "Mapa {{mapNumber}}",
+	"mdcRemoveMapTitle": "Remover Mapa {{mapNumber}}",
+	"mdcOverallAvgLabel": "Média Geral % Após o Mapa",
+	"mdcNotesInMapLabel": "Notas no Mapa",
+	"mdcIndividualMapPercentages": "Porcentagens Individuais do Mapa",
+	"mdcNotes": "notas",
+	"mdcVerification": "Verificação",
+	"mdcOverallAfterMap": "Geral Após o Mapa {{mapNumber}}",
+	"mdcGiven": "Dado",
+	"mdcErrorMinMaps": "São necessários pelo menos {{minMaps}} mapas.",
+	"mdcErrorInvalidInput": "Por favor, verifique os valores de entrada. A média geral deve estar entre 0-100 e as notas devem ser um número inteiro positivo.",
+	"mdcNA": "N/A",
+	"mdcCalculatedSuccess": "Pontuações calculadas com sucesso!"
 }
