--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,6 +1,6 @@
 {
 	"pageTitle": "WebTools",
-	"pageSubtitle": "A little collection of simple tools I made to make my life easier, feel free to use it if you want.",
+	"pageSubtitle": "A little collection of simple tools I made to make your life easier, feel free to use it.",
 	"searchPlaceholder": "Search for tools...",
 	"openToolButton": "Open Tool",
 	"noToolsFound": "No tools found matching your search.",
