--- a/src/locales/pt_BR.json
+++ b/src/locales/pt_BR.json
@@ -1,6 +1,6 @@
 {
 	"pageTitle": "WebTools",
-	"pageSubtitle": "Uma pequena coleção de ferramentas simples que criei para facilitar minha vida, sinta-se à vontade para usá-las se quiser.",
+	"pageSubtitle": "Uma pequena coleção de ferramentas simples que criei para facilitar sua vida, sinta-se à vontade para usá-las.",
 	"searchPlaceholder": "Procurar por ferramentas...",
 	"openToolButton": "Abrir Ferramenta",
 	"noToolsFound": "Nenhuma ferramenta encontrada para sua busca.",
