Added most visited tools appear at the top (Suggested by someone) and also added some other animations and refactored teh way I translate cards

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -7,10 +7,9 @@
 	"footerMadeWith": "Made with",
 	"footerBy": "by Tanese.",
 	"footerGithubLink": "View this on GitHub!",
-
+	"toolVisits": "Total Visits",
 	"defaultMetaDescription": "WebTools: A collection of free online utilities including QR code generator, Markdown editor, Base64 converter, text analyzer, JSON formatter, image converter, regex tester, and more. Simplify your web development and data tasks.",
 	"homePageDescription": "Discover WebTools, a suite of free online utilities for developers and everyday tasks. Includes QR generator, Markdown editor, Base64 converter, and many more useful tools.",
-
 	"backButtonTitle": "Back to Home",
 
 	"suggestionsPageTitle": "Tool Suggestions",
@@ -49,6 +48,47 @@
 	"errorNetwork": "Network error. Please check your connection.",
 	"anonymousUser": "Anonymous",
 	"postedBy": "Posted by {{username}} on {{date}}",
+
+	"toolTitle_qr": "QR Code Generator",
+	"toolDesc_qr": "Generates QR codes from any text or link instantly.",
+	"toolTitle_markdown": "Markdown Editor",
+	"toolDesc_markdown": "Write and preview markdown with live updates.",
+	"toolTitle_base64": "Base64 Converter",
+	"toolDesc_base64": "Convert files and text to/from Base64 encoding.",
+	"toolTitle_textAnalyzer": "Text Analyzer",
+	"toolDesc_textAnalyzer": "Analyze silly text statistics like word count, characters, sentences, and top keywords.",
+	"toolTitle_jsonFormatter": "JSON Formatter",
+	"toolDesc_jsonFormatter": "Format, validate, beautify and minify JSON data.",
+	"toolTitle_imageConverter": "Image Converter",
+	"toolDesc_imageConverter": "Convert images between different formats like JPEG, PNG, WEBP.",
+	"toolTitle_regexTester": "Regex Tester",
+	"toolDesc_regexTester": "Test, visualize, and debug regular expressions with a live preview and cheatsheet.",
+	"toolTitle_browserInfo": "Browser & IP Info",
+	"toolDesc_browserInfo": "View your browser details, IP address, and supported web features. Client-side info only.",
+	"toolTitle_dataConverter": "JSON/CSV/YAML Converter",
+	"toolDesc_dataConverter": "Convert data between JSON, CSV, and YAML formats. Includes formatting options.",
+	"toolTitle_unitConverter": "Unit Converter",
+	"toolDesc_unitConverter": "Convert between various units of length, mass, temperature, speed, and data storage.",
+	"toolTitle_colorConverter": "Color Converter",
+	"toolDesc_colorConverter": "Convert colors between HEX, RGB, HSL, HSV, and CSS names.",
+	"toolTitle_subnetCalculator": "IP Subnet Calculator",
+	"toolDesc_subnetCalculator": "Calculate network details like network/broadcast addresses, host range, and masks.",
+	"toolTitle_loremIpsum": "Lorem Ipsum Generator",
+	"toolDesc_loremIpsum": "Generate placeholder text (paragraphs, words, lists).",
+	"toolTitle_faviconGenerator": "Favicon Generator",
+	"toolDesc_faviconGenerator": "Create favicons for your website from a single image, including manifest and HTML.",
+	"toolTitle_hashGenerator": "Hash Generator",
+	"toolDesc_hashGenerator": "Calculate MD5, SHA-1, SHA-256, SHA-512 hashes for text or files.",
+	"toolTitle_urlShortener": "URL Shortener",
+	"toolDesc_urlShortener": "Shorten long URLs for easier sharing using a public API.",
+	"toolTitle_baseConverter": "Universal Base Converter",
+	"toolDesc_baseConverter": "Convert text and numbers between Binary, Decimal, Hex, Octal, and ASCII.",
+	"toolTitle_maniaCalc": "Mania Dan Calculator",
+	"toolDesc_maniaCalc": "Calculate individual map scores for osu!mania dan clears.",
+	"toolTitle_audioConverter": "Audio Converter",
+	"toolDesc_audioConverter": "Convert MP4, MKV, MOV videos or audio files to MP3, WAV, or OGG audio formats.",
+	"toolTitle_suggest": "Suggest a Tool",
+	"toolDesc_suggest": "Have an idea for a new tool? Share it with the community!",
 
 	"qrPageTitle": "QR Code Generator",
 	"qrPageSubtitle": "Enter text or a URL to generate a QR code instantly.",
@@ -292,7 +332,6 @@
 	"ucSwapUnitsTitle": "Swap Units",
 	"ucResultLabel": "Result:",
 	"ucErrorConversion": "Conversion Error",
-
 	"ucCategoryLength": "Length",
 	"ucUnitMeter": "Meter",
 	"ucUnitKilometer": "Kilometer",
@@ -302,7 +341,6 @@
 	"ucUnitYard": "Yard",
 	"ucUnitFoot": "Foot",
 	"ucUnitInch": "Inch",
-
 	"ucCategoryMass": "Mass / Weight",
 	"ucUnitKilogram": "Kilogram",
 	"ucUnitGram": "Gram",
@@ -310,18 +348,15 @@
 	"ucUnitMetricTon": "Metric Ton",
 	"ucUnitPound": "Pound",
 	"ucUnitOunce": "Ounce",
-
 	"ucCategoryTemperature": "Temperature",
 	"ucUnitCelsius": "Celsius",
 	"ucUnitFahrenheit": "Fahrenheit",
 	"ucUnitKelvin": "Kelvin",
-
 	"ucCategorySpeed": "Speed",
 	"ucUnitMetersPerSecond": "Meters/second (m/s)",
 	"ucUnitKilometersPerHour": "Kilometers/hour (km/h)",
 	"ucUnitMilesPerHour": "Miles/hour (mph)",
 	"ucUnitKnot": "Knot (kn)",
-
 	"ucCategoryDigitalStorage": "Digital Storage",
 	"ucUnitByte": "Byte (B)",
 	"ucUnitKilobyte": "Kilobyte (KB)",
@@ -432,7 +467,7 @@
 	"hgCopiedError": "Failed to copy hash.",
 
 	"usPageTitle": "URL Shortener",
-	"usPageSubtitle": "Enter a long URL to make it short and easy to share. Uses a public shortening service.",
+	"usPageSubtitle": "Shorten long URLs for easier sharing using a public API.",
 	"usLongUrlLabel": "Long URL:",
 	"usLongUrlPlaceholder": "https://example.com/very/long/url/to/shorten",
 	"usShortenButton": "Shorten URL",
