removed steganography because lib broke

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -544,32 +544,5 @@
 	"acErrorConversion": "Conversion failed.",
 	"acErrorFileRead": "Error reading file.",
 	"acErrorFfmpegLoad": "Failed to load converter engine. Please try refreshing.",
-	"acManyFilesWarning": "Processing large or many files may take significant time and consume browser resources.",
-
-	"toolTitle_steganography": "Image Steganography",
-	"toolDesc_steganography": "Hide secret text messages inside of an image. Decode messages from images.",
-	"stegPageTitle": "Image Steganography",
-	"stegPageSubtitle": "Hide a secret message in an image file (encode) or extract a message from an image (decode).",
-	"stegEncodeMode": "Encode",
-	"stegDecodeMode": "Decode",
-	"stegInputHeaderEncode": "Your Image & Message",
-	"stegInputHeaderDecode": "Image to Decode",
-	"stegSelectImage": "Select Image (PNG, JPG)",
-	"stegSecretTextLabel": "Secret Message to Hide:",
-	"stegSecretTextPlaceholder": "Your secret message goes here...",
-	"stegEncodeAction": "Encode Message",
-	"stegDecodeAction": "Decode Message",
-	"stegProcessing": "Processing...",
-	"stegOutputHeader": "Result",
-	"stegEncodeSuccessMessage": "Success! Your message has been encoded. Download the new image below:",
-	"stegDownloadButton": "Download Encoded Image",
-	"stegDecodeSuccessMessage": "Message Extracted Successfully:",
-	"stegDecodeFailMessage": "No hidden message was found in this image.",
-	"stegDecodedTextPlaceholder": "Decoded message will appear here...",
-	"stegErrorInvalidFileType": "Invalid file type. Please select a PNG or JPG image.",
-	"stegErrorNoImage": "Please select an image first.",
-	"stegErrorNoText": "Please enter a message to hide.",
-	"stegErrorProcessing": "An error occurred while processing the image.",
-	"stegErrorNoMessageFound": "No hidden message found.",
-	"stegOutputFilenameLabel": "Output Filename:"
+	"acManyFilesWarning": "Processing large or many files may take significant time and consume browser resources."
 }
