--- a/src/locales/pt_BR.json
+++ b/src/locales/pt_BR.json
@@ -543,32 +543,5 @@
 	"acErrorConversion": "Falha na conversão.",
 	"acErrorFileRead": "Erro ao ler o arquivo.",
 	"acErrorFfmpegLoad": "Falha ao carregar o Sistema de conversão. Por favor, tente atualizar a página.",
-	"acManyFilesWarning": "Processar arquivos grandes ou muitos arquivos pode levar tempo considerável e consumir recursos do navegador.",
-
-	"toolTitle_steganography": "Esteganografia em Imagem",
-	"toolDesc_steganography": "Oculte mensagens de texto secretas dentro de uma imagem. Decodifique mensagens de imagens.",
-	"stegPageTitle": "Esteganografia em Imagem",
-	"stegPageSubtitle": "Oculte uma mensagem secreta em um arquivo de imagem (codificar) ou extraia uma mensagem de uma imagem (decodificar).",
-	"stegEncodeMode": "Codificar",
-	"stegDecodeMode": "Decodificar",
-	"stegInputHeaderEncode": "Sua Imagem e Mensagem",
-	"stegInputHeaderDecode": "Imagem para Decodificar",
-	"stegSelectImage": "Selecionar Imagem (PNG, JPG)",
-	"stegSecretTextLabel": "Mensagem Secreta para Ocultar:",
-	"stegSecretTextPlaceholder": "Sua mensagem secreta vai aqui...",
-	"stegEncodeAction": "Codificar Mensagem",
-	"stegDecodeAction": "Decodificar Mensagem",
-	"stegProcessing": "Processando...",
-	"stegOutputHeader": "Resultado",
-	"stegEncodeSuccessMessage": "Sucesso! Sua mensagem foi codificada. Baixe a nova imagem abaixo:",
-	"stegDownloadButton": "Baixar Imagem Codificada",
-	"stegDecodeSuccessMessage": "Mensagem Extraída com Sucesso:",
-	"stegDecodeFailMessage": "Nenhuma mensagem oculta foi encontrada nesta imagem.",
-	"stegDecodedTextPlaceholder": "A mensagem decodificada aparecerá aqui...",
-	"stegErrorInvalidFileType": "Tipo de arquivo inválido. Selecione uma imagem PNG ou JPG.",
-	"stegErrorNoImage": "Por favor, selecione uma imagem primeiro.",
-	"stegErrorNoText": "Por favor, insira uma mensagem para ocultar.",
-	"stegErrorProcessing": "Ocorreu um erro ao processar a imagem.",
-	"stegErrorNoMessageFound": "Nenhuma mensagem oculta encontrada.",
-	"stegOutputFilenameLabel": "Nome do Arquivo de Saída:"
+	"acManyFilesWarning": "Processar arquivos grandes ou muitos arquivos pode levar tempo considerável e consumir recursos do navegador."
 }
